--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,18 @@
 html{
-    color: blueviolet;
-    text-align: center;
+    color: blue;
+    text-align: right;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid black;
+    margin: 0 auto;
+}
+
+#container h1{
+   font-size: 20px; 
 }
