--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,28 @@
-html{
+body{
     color: blue;
     text-align: right;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 
+#cabecera{
+    background: green;
+    color: yellow;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.5);
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline{
+    margin: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid black;
     margin: 0 auto;
@@ -15,4 +30,8 @@ html{
 
 #container h1{
    font-size: 20px; 
+}
+
+#post{
+    padding: 1em;
 }
