--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: blue;
     text-align: right;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 
