--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+    background: rgb(59, 59, 59);
     color: red;
     text-align: right;
     font-family: Arial, Helvetica, sans-serif;
@@ -6,12 +7,17 @@ body{
 }
 
 #cabecera{
-    background: green;
+    background: #33A;
     color: yellow;
     box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.5);
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 1em;
+}
+
+#cabecera #logo{
+    width: 100px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -33,5 +39,6 @@ body{
 }
 
 #post{
+    background: white;
     padding: 1em;
 }
